# base94

./: Cargo.toml  README.md  pyproject.toml
base94/: base94.py
python/base94/: __init__.py  _base94.pyi
python/benchmarks/: __main__.py  performance_test.py
python/tests/: test_cons_ende.py  test_cons_pyrs.py  test_decode.py  test_encode.py
src/: lib.rs
